--- a/Source/Praetorium/Praetorium.csproj
+++ b/Source/Praetorium/Praetorium.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionDisposable.cs" />
     <Compile Include="ActionExtensions.cs" />
     <Compile Include="BasicExtensions.cs" />
     <Compile Include="CollectionExtensions.cs" />
