--- a/Packaging/nuget/Praetorium.nuspec
+++ b/Packaging/nuget/Praetorium.nuspec
@@ -15,6 +15,6 @@
   </metadata>
   <files>
     <file src="..\..\Builds\net40\Praetorium.dll" target="lib\net40" />
-    <file src="..\..\Builds\sl5\Praetorium.dll" target="lib\sl5" />
+    <file src="..\..\Builds\sl5\Praetorium.SL5.dll" target="lib\sl5" />
   </files>
 </package>
