--- a/Source/Praetorium/Praetorium.csproj
+++ b/Source/Praetorium/Praetorium.csproj
@@ -41,10 +41,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ActionDisposable.cs" />
     <Compile Include="ActionExtensions.cs" />
     <Compile Include="BasicExtensions.cs" />
@@ -130,7 +134,7 @@
     <Compile Include="Services\BasicInstanceProvider.cs" />
     <Compile Include="Services\CachedChannelServiceRegistry.cs" />
     <Compile Include="Services\ClientInspectorBehavior.cs" />
-    <Compile Include="Services\ConfigurerServiceHost.cs" />
+    <Compile Include="Services\InjectedServiceHost.cs" />
     <Compile Include="Services\DefaultEndpointNameAttribute.cs" />
     <Compile Include="Services\DispatchInspectorBehavior.cs" />
     <Compile Include="Services\ErrorHandler.cs" />
@@ -138,6 +142,7 @@
     <Compile Include="Services\FaultFactory.cs" />
     <Compile Include="Services\IFaultBuilder.cs" />
     <Compile Include="Services\IFaultFactory.cs" />
+    <Compile Include="Services\InjectedServiceHostFactory.cs" />
     <Compile Include="Services\IRemoteServiceRegistry.cs" />
     <Compile Include="Services\IServiceConfigurer.cs" />
     <Compile Include="Services\IServiceProxy.cs" />
