Added LogContextScope and logging extensions

--- a/Source/Praetorium (SL5)/Praetorium (SL5).csproj
+++ b/Source/Praetorium (SL5)/Praetorium (SL5).csproj
@@ -217,6 +217,9 @@
     <Compile Include="..\Praetorium\Logging\IExceptionFormatterFactory.cs">
       <Link>Logging\IExceptionFormatterFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Praetorium\Logging\ILogContextScope.cs">
+      <Link>Logging\ILogContextScope.cs</Link>
+    </Compile>
     <Compile Include="..\Praetorium\Logging\ILogEntry.cs">
       <Link>Logging\ILogEntry.cs</Link>
     </Compile>
@@ -228,6 +231,9 @@
     </Compile>
     <Compile Include="..\Praetorium\Logging\ILoggingConfigurer.cs">
       <Link>Logging\ILoggingConfigurer.cs</Link>
+    </Compile>
+    <Compile Include="..\Praetorium\Logging\LogContextScope.cs">
+      <Link>Logging\LogContextScope.cs</Link>
     </Compile>
     <Compile Include="..\Praetorium\Logging\LogEntry.cs">
       <Link>Logging\LogEntry.cs</Link>
@@ -312,7 +318,7 @@
       <FlavorProperties GUID="{A1591282-1198-4647-A2B1-27E5FF5F6F3B}">
         <SilverlightProjectProperties />
       </FlavorProperties>
-      <UserProperties ProjectLinkReference="c3472c59-fb7d-48fa-afee-ab0a6d185272" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="c3472c59-fb7d-48fa-afee-ab0a6d185272" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
