--- a/Source/Praetorium.NLog/Praetorium.NLog (SL5)/Praetorium.NLog (SL5).csproj
+++ b/Source/Praetorium.NLog/Praetorium.NLog (SL5)/Praetorium.NLog (SL5).csproj
@@ -48,10 +48,10 @@
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.1\lib\sl5\NLog.dll</HintPath>
+      <HintPath>..\packages\NLog.2.0.1.2\lib\sl5\NLog.dll</HintPath>
     </Reference>
     <Reference Include="Praetorium.SL5">
-      <HintPath>..\packages\Praetorium.1.0.2\lib\sl5\Praetorium.SL5.dll</HintPath>
+      <HintPath>..\packages\Praetorium.1.0.4\lib\sl5\Praetorium.SL5.dll</HintPath>
     </Reference>
     <Reference Include="system" />
     <Reference Include="System.Core">
@@ -59,6 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Praetorium.NLog\LogContextLayoutRendererBase.cs">
+      <Link>LogContextLayoutRendererBase.cs</Link>
+    </Compile>
     <Compile Include="..\Praetorium.NLog\NLogLogger.cs">
       <Link>NLogLogger.cs</Link>
     </Compile>
