--- a/Source/Praetorium.NLog/Praetorium.NLog/Praetorium.NLog.csproj
+++ b/Source/Praetorium.NLog/Praetorium.NLog/Praetorium.NLog.csproj
@@ -30,23 +30,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="InstallNLogConfig">
-      <HintPath>..\packages\NLog.2.0.1\lib\net40\InstallNLogConfig.exe</HintPath>
+    <Reference Include="NLog, Version=2.0.1.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.1\lib\net40\NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="Praetorium">
-      <HintPath>..\packages\Praetorium.1.0.2\lib\net40\Praetorium.dll</HintPath>
+    <Reference Include="Praetorium, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Praetorium.1.0.4\lib\net40\Praetorium.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HttpLogContextLayoutRenderer.cs" />
+    <Compile Include="LogContextLayoutRendererBase.cs" />
     <Compile Include="NLogLogger.cs" />
     <Compile Include="NLogLoggerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WcfLogContextLayoutRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
