fixed the IsNullableOf method

--- a/Source/Praetorium.UnitTests/Praetorium.UnitTests.csproj
+++ b/Source/Praetorium.UnitTests/Praetorium.UnitTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Utilities\ClosesSpecs.cs" />
     <Compile Include="Utilities\DerivesFromSpecs.cs" />
     <Compile Include="Utilities\GetEnumerableTypeSpecs.cs" />
+    <Compile Include="Utilities\IsGenericTypeOfSpecs.cs" />
     <Compile Include="Utilities\IsNullableOfSpecs.cs" />
     <Compile Include="Utilities\IsNullableSpecs.cs" />
     <Compile Include="Utilities\IsNullableTypeSpecs.cs" />
