--- a/Source/Praetorium.UnitTests/Praetorium.UnitTests.csproj
+++ b/Source/Praetorium.UnitTests/Praetorium.UnitTests.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Eventing\When_a_listener_interface_is_registered.cs" />
     <Compile Include="Eventing\When_subscribing_by_action.cs" />
     <Compile Include="Eventing\When_subscribing_by_method.cs" />
+    <Compile Include="Logging\When_getting_an_exception_formatter.cs" />
+    <Compile Include="When_comparing_exception_types.cs" />
+    <Compile Include="Logging\When_formatting_an_exception.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subjects.cs" />
     <Compile Include="Tags.cs" />
