--- a/Source/Praetorium.NLog/Praetorium.NLog.Tests/Praetorium.NLog.Tests.csproj
+++ b/Source/Praetorium.NLog/Praetorium.NLog.Tests/Praetorium.NLog.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E0168E8-F5C0-45B0-B991-3F9707706A39}</ProjectGuid>
+    <ProjectGuid>{5F076FAD-96A5-441B-8BFC-F819D8DF2F22}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Praetorium.NLog</RootNamespace>
-    <AssemblyName>Praetorium.NLog</AssemblyName>
+    <RootNamespace>Praetorium.NLog.Tests</RootNamespace>
+    <AssemblyName>Praetorium.NLog.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -28,32 +28,46 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=2.1.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\packages\FluentAssertions.2.1.0.0\lib\net40\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
       <HintPath>..\packages\NLog.2.1.0\lib\net40\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="Praetorium, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Praetorium">
       <HintPath>..\packages\Praetorium.1.0.5\lib\net40\Praetorium.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Web" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HttpLogContextLayoutRenderer.cs" />
-    <Compile Include="LogContextLayoutRendererBase.cs" />
-    <Compile Include="NLogLogger.cs" />
-    <Compile Include="NLogLoggerFactory.cs" />
+    <Compile Include="LogContextLayoutRendererSpecs.cs" />
+    <Compile Include="NLogLoggerSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WcfLogContextLayoutRenderer.cs" />
+    <Compile Include="TestableNLogLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Praetorium.NLog\Praetorium.NLog.csproj">
+      <Project>{7e0168e8-f5c0-45b0-b991-3f9707706a39}</Project>
+      <Name>Praetorium.NLog</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
