Corrected ExceptionFormatterBuilder design and impl

--- a/Source/Praetorium.UnitTests/Praetorium.UnitTests.csproj
+++ b/Source/Praetorium.UnitTests/Praetorium.UnitTests.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Praetorium.UnitTests</RootNamespace>
     <AssemblyName>Praetorium.UnitTests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Machine.Specifications">
@@ -45,6 +48,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -65,7 +69,7 @@
     <Compile Include="Eventing\When_a_listener_interface_is_registered.cs" />
     <Compile Include="Eventing\When_subscribing_by_action.cs" />
     <Compile Include="Eventing\When_subscribing_by_method.cs" />
-    <Compile Include="Logging\When_getting_an_exception_formatter.cs" />
+    <Compile Include="Logging\When_getting_a_formatter_from_factory.cs" />
     <Compile Include="When_comparing_exception_types.cs" />
     <Compile Include="Logging\When_formatting_an_exception.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
