--- a/Source/Praetorium.UnitTests/packages.config
+++ b/Source/Praetorium.UnitTests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="3.0.107" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.5.15" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
