--- a/Source/Praetorium/Praetorium.csproj
+++ b/Source/Praetorium/Praetorium.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Contexts\ContextExtensions.cs" />
     <Compile Include="Contexts\DictionaryContext.cs" />
     <Compile Include="Contexts\HttpRequestContext.cs" />
+    <Compile Include="Contexts\HttpRequestOrProcessHybridContext.cs" />
     <Compile Include="Contexts\HttpRequestOrThreadHybridContext.cs" />
     <Compile Include="Contexts\HttpSessionContext.cs" />
     <Compile Include="Contexts\IContext.cs" />
@@ -99,6 +100,8 @@
     <Compile Include="IOExtensions.cs" />
     <Compile Include="ISerializer.cs" />
     <Compile Include="IStartable.cs" />
+    <Compile Include="ITypeCache.cs" />
+    <Compile Include="TypeCache.cs" />
     <Compile Include="IWorkItem.cs" />
     <Compile Include="KeyedCollectionExtensions.cs" />
     <Compile Include="Logging\ExceptionFormatterBuilder.cs" />
