--- a/Source/Praetorium (SL5)/Praetorium (SL5).csproj
+++ b/Source/Praetorium (SL5)/Praetorium (SL5).csproj
@@ -190,9 +190,6 @@
     <Compile Include="..\Praetorium\IStartable.cs">
       <Link>IStartable.cs</Link>
     </Compile>
-    <Compile Include="..\Praetorium\ITypeCache.cs">
-      <Link>ITypeCache.cs</Link>
-    </Compile>
     <Compile Include="..\Praetorium\IWorkItem.cs">
       <Link>IWorkItem.cs</Link>
     </Compile>
@@ -315,7 +312,7 @@
       <FlavorProperties GUID="{A1591282-1198-4647-A2B1-27E5FF5F6F3B}">
         <SilverlightProjectProperties />
       </FlavorProperties>
-      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="c3472c59-fb7d-48fa-afee-ab0a6d185272" />
+      <UserProperties ProjectLinkReference="c3472c59-fb7d-48fa-afee-ab0a6d185272" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
