--- a/Source/Praetorium.UnitTests/packages.config
+++ b/Source/Praetorium.UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FluentAssertions" version="3.0.107" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.5.15" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
